ADD_LIBRARY(pppd_compat SHARED pppd_compat.c)
TARGET_LINK_LIBRARIES(pppd_compat sigchld)
set_property(TARGET pppd_compat PROPERTY INSTALL_RPATH ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX}/accel-ppp)
ADD_LIBRARY(ippool SHARED ippool.c)
ADD_LIBRARY(ipv6pool SHARED ipv6pool.c)
ADD_LIBRARY(sigchld SHARED sigchld.c)
ADD_LIBRARY(chap-secrets SHARED chap-secrets.c)
ADD_LIBRARY(logwtmp SHARED logwtmp.c)
TARGET_LINK_LIBRARIES(logwtmp util)
ADD_LIBRARY(connlimit SHARED connlimit.c)

INSTALL(TARGETS pppd_compat ippool ipv6pool sigchld chap-secrets logwtmp connlimit
	LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
)

IF (SHAPER)
	ADD_LIBRARY(shaper_tbf SHARED shaper_tbf.c)
	IF (LIBNL_PREFIX)
		SET_PROPERTY(TARGET shaper_tbf PROPERTY COMPILE_FLAGS "-I${LIBNL_PREFIX}/include")
		SET_PROPERTY(TARGET shaper_tbf PROPERTY LINK_FLAGS "-L${LIBNL_PREFIX}/lib")
	ENDIF (LIBNL_PREFIX)
	TARGET_LINK_LIBRARIES(shaper_tbf nl m)
	INSTALL(TARGETS shaper_tbf LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp)
ENDIF (SHAPER)


IF (NETSNMP)
	ADD_SUBDIRECTORY(net-snmp)
ENDIF (NETSNMP)

IF (LUA)
	ADD_LIBRARY(lua SHARED lua.c)

	FIND_PATH(LUA_INCLUDE_DIR lua.h HINTS $ENV{LUA_DIR} PATH_SUFFIXES include/lua52 include/lua5.2 include/lua include)
	FIND_LIBRARY(LUA_LIBRARY NAMES lua52 lua5.2 lua-5.2 lua HINTS $ENV{LUA_DIR} PATH_SUFFIXES lib64 lib)
	SET_PROPERTY(TARGET lua PROPERTY COMPILE_FLAGS "-I${LUA_INCLUDE_DIR}")
	SET_PROPERTY(TARGET lua PROPERTY LINK_FLAGS "-L${LUA_LIBRARY}")
	TARGET_LINK_LIBRARIES(lua ${LUA_LIBRARY})
	INSTALL(TARGETS lua
		LIBRARY DESTINATION lib${LIB_SUFFIX}/accel-ppp
	)
ENDIF (LUA)
